--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "amqplib": "^0.4.0"
+    "amqp-rpc-factory": "^1.0.1",
+    "amqplib": "^0.4.0",
+    "express": "^4.13.3"
   }
 }
